# Model-Context-Protocol-Tutorial

./: README.md
Library-MCP-Server/: README.md  books.json  client.py  pyproject.toml  requirements.txt  server.py  stdio_server.py  streamable_http_client.py
Personal-Database-MCP-Server/: README.md  create_vector_database.py  main.py  prepare_documents.py  pyproject.toml  requirements.txt  retriever.py  server.py
