[project]
name = "personal-database-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "ddgs>=9.2.3",
    "duckduckgo-search>=8.1.1",
    "httpx>=0.28.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "mcp[cli]>=1.11.0",
    "openai>=1.95.1",
    "qdrant-client>=1.14.3",
    "sentence-transformers>=5.0.0",
    "transformers>=4.53.2",
]
